CSS수정, useNavigate 추가

--- a/src/components/common/header.css
+++ b/src/components/common/header.css
@@ -1,7 +1,11 @@
+@import url(/src/fonts/fonts.css);
+
 .title {
+  cursor: pointer;
+  font-family: AppleSDGothicNeoB;
   height: 100px;
   line-height: 100px;
-  background-color: gray;
+  background-color: transparent;
   text-align: center;
   font-size: 30px;
   margin-bottom: 20px;
