--- a/src/index.css
+++ b/src/index.css
@@ -48,9 +48,16 @@ select {
 
 html {
   box-sizing: border-box;
+
+  /* 전역 폰트 */
+  font-family: "Apple SD Gothic Neo", sans-serif;
+  font-style: normal;
+  font-weight: 100;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
@@ -73,3 +80,32 @@ td,
 th {
   padding: 0;
 }
+
+a {
+  text-decoration: none;
+}
+
+/* body gradient */
+/* html {
+  overflow-y: scroll;
+}
+
+body {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
+  overflow: hidden;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+} */
